[project]
name = "kiro-gateway-launcher"
version = "0.1.0"
description = "A CLI launcher for kiro-gateway that handles installation, configuration, and updates"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "loguru",
    "python-dotenv",
    "tiktoken",
]

[project.scripts]
kiro-gateway-launcher = "kiro_gateway_launcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiro_gateway_launcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
